Bug 1224211. Hid the horizontal scroll bar.

--- a/media/css/firefox/nightly_firstrun.less
+++ b/media/css/firefox/nightly_firstrun.less
@@ -212,3 +212,6 @@ html[dir="rtl"] {
         background-position: right 50% top 15px;
     }
 }
+html {
+    overflow-x: hidden;
+}
